Fixed register button as in some cases it was not visible

--- a/resources/assets/less/includes/pages/event-items.less
+++ b/resources/assets/less/includes/pages/event-items.less
@@ -376,11 +376,11 @@
 		}
 
 		.event-items-right-bt{
-			position: absolute;
+			position: fixed;
 			padding-bottom:20px;
 			background: @light-color;
-			bottom: 104px; 
-			width: 85%;
+			bottom: 0; 
+			width: 74%;
 
 			.btn-primary{
 				width: 100%;
@@ -389,6 +389,10 @@
 			p{
 				font-size: 12px;
 				text-align: left;
+			}
+
+			a {
+				width: 25%!important;
 			}
 
 			@media @phone{
